kubernetes/apps/alertmanager-dashboard/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alertmanager-dashboard
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
