kubernetes/apps/alertmanager-dashboard/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: alertmanager-dashboard
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
